--- a/src/app/admin-authorization/admin-authorization.component.html
+++ b/src/app/admin-authorization/admin-authorization.component.html
@@ -8,7 +8,7 @@
             {{errorMessage}}
         </div>
         <div class="wrap-input">
-            <input type="text" placeholder="Login" pInputText formControlName="login" required>
+            <input type="text" placeholder="Логин" pInputText formControlName="login" required>
             <div *ngIf="authoruzationsForm.get('login').invalid && (authoruzationsForm.get('login').dirty || authoruzationsForm.get('login').touched)"
                 class="alert alert-danger">
                 <div *ngIf="authoruzationsForm.controls['login'].errors.required">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="wrap-input">
-            <input type="password" placeholder="Password" pPassword formControlName="password" required>
+            <input type="password" placeholder="Пароль" pPassword formControlName="password" required>
             <div *ngIf="authoruzationsForm.get('password').invalid && (authoruzationsForm.get('password').dirty || authoruzationsForm.get('password').touched)"
                 class="alert alert-danger">
                 <div *ngIf="authoruzationsForm.controls['password'].errors.required">
@@ -26,6 +26,6 @@
                 </div>
             </div>
         </div>
-        <button type="submit" (click)="submit()">Login</button>
+        <button type="submit" (click)="submit()">Увійти</button>
     </form>
 </div>
