--- a/src/app/authorizations/authorizations.component.html
+++ b/src/app/authorizations/authorizations.component.html
@@ -5,27 +5,27 @@
   <div id="authoruzations">
     <form [formGroup]="authoruzationsForm" novalidate>
 
-      <h4 class="info-title">Login<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Логін<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input id="login" type="text" pInputText formControlName="login">
         <div *ngIf="authoruzationsForm.get('login').invalid &&
                     (authoruzationsForm.get('login').dirty || authoruzationsForm.get('login').touched)"
           class="alert alert-danger">
           <div *ngIf="authoruzationsForm.controls['login'].errors.required">
-            Login is required
+            Логін необхідний
           </div>
         </div>
       </div>
       <hr>
 
-      <h4 class="info-title">Password<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Пароль<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input type="password" pPassword formControlName="password" />
         <div *ngIf="authoruzationsForm.get('password').invalid &&
                     (authoruzationsForm.get('password').dirty || authoruzationsForm.get('password').touched)"
           class="alert alert-danger">
           <div *ngIf="authoruzationsForm.controls['password'].errors.required">
-            Password is required
+            Пароль необхідний
           </div>
         </div>
       </div>
@@ -37,26 +37,24 @@
       {{errorMessage}}
     </div>
 
-    <button *ngIf="!isLoading" class="sign-in" pButton [disabled]="authoruzationsForm.invalid" (click)="submitSignIn()">Sign
-      In</button>
-    <button *ngIf="isLoading" class="sign-in" pButton [disabled]="authoruzationsForm.invalid" (click)="submitSignIn()">Sign
-      In...</button>
+    <button *ngIf="!isLoading" class="sign-in" pButton [disabled]="authoruzationsForm.invalid" (click)="submitSignIn()">Увійти</button>
+    <button *ngIf="isLoading" class="sign-in" pButton [disabled]="authoruzationsForm.invalid" (click)="submitSignIn()">Входимо...</button>
 
     <hr *ngIf="role!='Recruiter'">
     <div class=fb_google *ngIf="role!='Recruiter'">
-      <label class="title"> Don't have an account?</label>
+      <label class="title">Не зареєстровані?</label>
     </div>
 
     <div *ngIf="role=='Employee'">
       <a (click)="showSignUpEmployee()" class="title">
-        Sing Up
+        Зареєструватися
         <i class="fa fa-sign-in icon" aria-hidden="true"></i>
       </a>
     </div>
 
     <div class=fb_google *ngIf="role=='Company'">
       <a (click)="showSignUpCompany()" class="title">
-        Sing Up
+        Зареєструватися
         <i class="fa fa-sign-in icon" aria-hidden="true"></i>
       </a>
     </div>
@@ -74,7 +72,7 @@
   <div id="employee-authoruzations">
     <form [formGroup]="signUpEmployeeForm" novalidate>
 
-      <h4 class="info-title">First name<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Ім'я<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input id="firstName" type="text" pInputText formControlName="firstName">
         <div *ngIf="signUpEmployeeForm.get('firstName').invalid &&
@@ -94,7 +92,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Last name<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Прізвище<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input id="lastName" type="text" pInputText formControlName="lastName">
         <div *ngIf="signUpEmployeeForm.get('lastName').invalid &&
@@ -114,7 +112,7 @@
       </div>
       <hr>
 
-      <h4 class="resume-title">Birth Date<span class="required-input-symbol">*</span></h4>
+      <h4 class="resume-title">Дата народження<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label size-input">
         <p-calendar [(ngModel)]="birthDate" dateFormat="D d, M yy" formControlName="birthDate"></p-calendar>
         <div *ngIf="signUpEmployeeForm.get('birthDate').invalid &&
@@ -127,7 +125,7 @@
       </div>
       <hr>
 
-      <h4 class="resume-title">City<span class="required-input-symbol">*</span></h4>
+      <h4 class="resume-title">Місто<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <p-dropdown [options]="cities" optionLabel="name" [(ngModel)]="selectedCity" placeholder="Select a City"
           formControlName="city"></p-dropdown>
@@ -141,7 +139,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Email
+      <h4 class="info-title">Емейл
         <span class="required-input-symbol">*</span>
       </h4>
       <div class="ui-float-label">
@@ -163,7 +161,7 @@
       </div>
       <hr class="hr-email">
 
-      <h4 class="info-title">Password
+      <h4 class="info-title">Пароль
         <span class="required-input-symbol">*</span>
       </h4>
       <div class="ui-float-label">
@@ -182,7 +180,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Confirm password
+      <h4 class="info-title">Підтвердити пароль
         <span class="required-input-symbol">*</span>
       </h4>
       <div class="ui-float-label">
@@ -211,7 +209,7 @@
     <div class="agreement">
       <p-checkbox [(ngModel)]="checkedAgreementEmployee" value="false" binary="false" [formControl]="signUpEmployeeForm.controls['checkedAgreementEmployee']"></p-checkbox>
       <a (click)="openInformation()">
-        <p class=" title Login_text"> I confirm my agreement </p>
+        <p class=" title Login_text"> Я підтверджую свою згоду </p>
       </a>
     </div>
     <div class="footer1"></div>
@@ -235,7 +233,7 @@
   <div id="company-authoruzations">
     <form [formGroup]="signUpCompanyForm" novalidate>
 
-      <h4 class="info-title">Company Name<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Назва компанії<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input id="companyName" type="text" pInputText formControlName="companyName">
         <div *ngIf="signUpCompanyForm.get('companyName').invalid &&
@@ -255,7 +253,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Boss Name<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Ім'я керівника<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input id="bossName" type="text" pInputText formControlName="bossName">
         <div *ngIf="signUpCompanyForm.get('bossName').invalid &&
@@ -272,7 +270,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Address<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Адреса<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label address">
         <input id="address" type="text" pInputText formControlName="address">
         <div *ngIf="signUpCompanyForm.get('address').invalid &&
@@ -289,7 +287,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Short Description<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Короткий опис<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input id="shortDescription" type="text" pInputText formControlName="shortDescription">
         <div *ngIf="signUpCompanyForm.get('shortDescription').invalid &&
@@ -307,7 +305,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">E-Mail
+      <h4 class="info-title">Емейл
         <span class="required-input-symbol">*</span>
       </h4>
       <div class="ui-float-label">
@@ -329,7 +327,7 @@
       </div>
       <hr class="hr-email">
 
-      <h4 class="info-title">Password
+      <h4 class="info-title">Пароль
         <span class="required-input-symbol">*</span>
       </h4>
       <div class="ui-float-label">
@@ -347,7 +345,7 @@
         </div>
       </div>
       <hr>
-      <h4 class="info-title">Confirm password<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Підвердити пароль<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input type="password" pPassword formControlName="passwordConfirm" />
         <div *ngIf="signUpCompanyForm.get('passwordConfirm').invalid &&
@@ -364,7 +362,7 @@
       </div>
       <hr>
 
-      <h4 class="vacancy-title">Full Description<span class="required-input-symbol">*</span></h4>
+      <h4 class="vacancy-title">Повний опис<span class="required-input-symbol">*</span></h4>
       <div class="text-area">
         <textarea [rows]="10" pDescription style="resize:none" formControlName="fullDescription" required></textarea>
 
@@ -378,7 +376,7 @@
       </div>
       <hr>
 
-      <h4 class="info-title">Web Site</h4>
+      <h4 class="info-title">Вебсайт</h4>
       <div class="ui-float-label">
         <input id="webSite" type="text" pInputText formControlName="site">
         <div *ngIf="signUpCompanyForm.get('site').invalid &&
@@ -395,7 +393,7 @@
       </div>
       <hr class="hr-after-website">
 
-      <h4 class="info-title">Phone</h4>
+      <h4 class="info-title">Номер телефону</h4>
       <div class="ui-float-label">
         <p-inputMask id="phone" mask="(999) 999-9999" formControlName="phone"></p-inputMask>
       </div>
@@ -419,7 +417,7 @@
       <p-checkbox [(ngModel)]="checkedAgreement" value="false" binary="false" [formControl]="signUpCompanyForm.controls['checkedAgreement']"></p-checkbox>
 
       <a (click)="openInformation()">
-        <p class="title Login_text"> I confirm my agreement </p>
+        <p class="title Login_text"> Я підтверджую свою згоду </p>
       </a>
     </div>
   </div>
@@ -438,7 +436,7 @@
   [baseZIndex]="10000">
 
   <div class="title">
-    I confirm my agreement with the Terms of Use of the site joblist.ua and the Privacy Policy
+    Я підтверджую свою згоду
   </div>
 
   <p-footer>
