--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -1,9 +1,9 @@
-<a class="invitation" (click)="visibleSidebar=true">Invitation <span class="counter">{{invitationCounter}}</span></a>
+<a class="invitation" (click)="visibleSidebar=true">Запрошення <span class="counter">{{invitationCounter}}</span></a>
 
 <p-sidebar class="invitation-sidebar" [(visible)]="visibleSidebar" position="right" [baseZIndex]="10000" [modal]="false"
   class="invitation-sidebar">
 
-  <h1 class="invitations">Invitations</h1>
+  <h1 class="invitations">Запрошення</h1>
   <hr>
 
   <div class="invitation-container">
