--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -31,15 +31,15 @@
     <!-- RECRUITER HEADER -->
     <div *ngIf="role === 'recruiter'">
       <div id="right-side-menu">
-        <a routerLink="/resumessearch" routerLinkActive="active">Find Resumes</a>
+        <a routerLink="/resumessearch" routerLinkActive="active">Пошук резюме</a>
         <p-sidebar class="profile-sidebar" [(visible)]="visibleForRecruiter" position="right" [baseZIndex]="10000">
-          <h1 class="company-profile">Profile</h1>
+          <h1 class="company-profile">Профіль</h1>
           <hr>
           <p-panelMenu [model]="itemsForRecruiter" [multiple]="false" [style]="{'width':'250px'}"></p-panelMenu>
         </p-sidebar>
 
         <a class="profile" (click)="visibleForRecruiter = true">
-          <span>Profile</span>
+          <span>Профіль</span>
           <i class="fa fa-sort-desc"></i>
         </a>
       </div>
@@ -47,18 +47,18 @@
     <!-- EMPLOYEE HEADER -->
     <div *ngIf="role === 'employee'">
       <div id="right-side-menu">
-        <a routerLink="/jobsearch" routerLinkActive="active">Find Vacancies</a>
+        <a routerLink="/jobsearch" routerLinkActive="active">Знайти вакансію</a>
         <app-invitation [employeeId]="uId"></app-invitation>
 
         <p-sidebar class="profile-sidebar" [(visible)]="visibleForEmployee" position="right" [baseZIndex]="10000"
           blockScroll="true">
-          <h1 class="company-profile">Profile</h1>
+          <h1 class="company-profile">Профіль</h1>
           <hr>
           <p-panelMenu [model]="itemsForEmployee" [multiple]="false" [style]="{'width':'250px'}"></p-panelMenu>
         </p-sidebar>
 
         <a class="profile" (click)="visibleForEmployee = true">
-          <span>Profile</span>
+          <span>Профіль</span>
           <i class="fa fa-sort-desc"></i>
         </a>
       </div>
