--- a/src/app/resume-form/resume-form.component.html
+++ b/src/app/resume-form/resume-form.component.html
@@ -6,7 +6,7 @@
                 <p-fileUpload name="demo[]" mode="advanced" [showUploadButton]="false" chooseLabel="Завантажити фото" (onSelect)="onUpload($event)"
                     accept="image/*" maxFileSize="1000000"></p-fileUpload>
             </div>
-            <h4 class="info-title">Full Name
+            <h4 class="info-title">Повне ім'я
                 <span class="required-input-symbol">*</span>
             </h4>
             <div>
